fix search button iphone

--- a/css/petite_resolution.css
+++ b/css/petite_resolution.css
@@ -105,7 +105,17 @@ nav li:hover
 
 button
 {
-    padding: 10px;
+    padding: 15px;
+}
+
+#button1
+{
+    display: none;
+}
+
+#button2
+{
+    display: block;
 }
 
 /* Filters */
